fix allowRegistration toggle

--- a/views/admin/config_editor.ejs
+++ b/views/admin/config_editor.ejs
@@ -73,6 +73,7 @@
       </div>
       <div>
         <label class="block text-sm font-medium"><span class="font-paragon">Allow Registration</span></label>
+        <input type="hidden" name="config[allowRegistration]" value="false" />
         <input type="checkbox" name="config[allowRegistration]" value="true" <%= config.allowRegistration ? 'checked' : '' %> />
       </div>
     </div>
